# sit

./: Makefile  README.md
build-tools/cross-compile-osx/: Dockerfile
build-tools/linux-build-container/: Dockerfile
doc/: toc.md
sit/: Cargo.toml
sit-core/: Cargo.toml
sit-core/src/: collection.rs  lib.rs  record.rs  repository.rs
sit-core/src/reducers/: duktape.rs
sit-web/: Cargo.toml
sit-web/src/: main.rs  webapp.rs
sit/src/: cli.rs  command_external.rs  command_integrity.rs  command_item.rs  command_items.rs  command_module.rs  command_record.rs  command_records.rs  command_reduce.rs  command_script.rs  main.rs  module_iter.rs  rebuild.rs
sit/tests/: command_init.rs  command_integrity.rs  command_item.rs  command_items.rs  command_record.rs  command_records.rs  command_reduce.rs
